# socketio_test

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: README.md  auth.py  config.py  main.py  models.py  socket_manager.py  sockets.py
frontend/: .gitignore  README.md  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: ChatBox.tsx
frontend/app/login/: page.tsx
